--- a/public/index.html
+++ b/public/index.html
@@ -31,5 +31,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="websdk.client.bundle.min.js"></script>
+    <script src="fingerprint.sdk.min.js"></script>
   </body>
 </html>
